descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 201X-XX-XX  Release 7.30.0                                     ---
----------------------------------------------------------------------

* removed MGED commands em, e_muves, l_muves, lm, read_muves, t_muves
	- Cliff Yapp
* removed deprecated irprep tools - Cliff Yapp
* removed deprecated fbed and pp-fb framebuffer tools - Cliff Yapp
* fixed rt support for specifying large object lists - Cliff Yapp
* new 'gex' tool for low-level .g file exploration - Tom Browder
* added support for command-line editing of metaballs - Sean Morrison
* added manual page for the 'get' command - Cliff Yapp
* fixed dbconcat behavior for binary database objects - Cliff Yapp


----------------------------------------------------------------------
--- 2018-11-30  Release 7.28.2                                     ---
----------------------------------------------------------------------

This is a patch release, applying several logic fixes and build system
corrections.

* fixed incorrect handling of NURBS near-miss points near edges
	- Cliff Yapp, Keith Bowman
* fixed support for large files on 64-bit Windows - Cliff Yapp
* fixed analyze command calculation of BoT volume - Keith Bowman
* fixed problem merging .g files containing dsp data - Cliff Yapp
* fixed infinite loop in OverlapTools GUI - Cliff Yapp


----------------------------------------------------------------------
--- 2018-10-01  Release 7.28.0                                     ---
----------------------------------------------------------------------

This major release of BRL-CAD incorporates a new feature for caching
of raytrace acceleration structures used when working with explicit
boundary representation (BREP) Non-uniform Rational Basis Spline
(NURBS) solids.  This will result in significant improvements to